KAL-10 Add endpoint to get youtube channel info
